--- a/front-end/client/.env
+++ b/front-end/client/.env
@@ -1,1 +1,4 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
+REACT_APP_API_URL=https://chatme-vjyp.onrender.com
+REACT_APP_PUBLIC_FOLDER = https://chatme-vjyp.onrender.com/images/
+
+
